nm-connectivity: default the check interval to 300 seconds

This matches what is documented in the man page; 300 seconds as the default
value for the connectivity checking interval if it's not set in the config
file or passed as a command-line parameter.

Reported-by: Mathieu Trudel-Lapierre <mathieu.trudel-lapierre@canonical.com>

https://bugzilla.gnome.org/show_bug.cgi?id=723350